<resources>
    <string name="app_name">Orange\'s Note</string>
    <string name="details">Details</string>
    <string name="list">List</string>
    <string name="button_add">新记事</string>
    <string name="label_list_fragment">List</string>
    <string name="label_details_fragment">编辑</string>
    <string name="details_title_text">事件名：</string>
    <string name="details_edit_text_hint">请输入...</string>
    <string name="details_details_text">描述：</string>
    <string name="details_complete_button">完成并保存</string>
    <string name="string_sort_time">最早</string>
    <string name="string_sort_time_descend">最新</string>
    <string name="string_sort_title">按字母升序</string>
    <string name="string_sort_title_descend">按字母降序</string>
    <string name="string_sort_custom">自定义</string>
    <string name="details_details_text_hint">在这里描述事件（可选）...</string>
    <string name="switch_details_alarm_text">定时提醒</string>
</resources>