<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/app_name"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="cloud.banson.orangeNote.list.ListFragment"
        android:label="@string/label_list_fragment"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="cloud.banson.orangeNote.details.DetailsFragment"
        android:label="@string/label_details_fragment"
        tools:layout="@layout/fragment_details" />
</navigation>